[package]
name = "time2"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Experimental extensions to the std::time module"
repository = "https://github.com/sfackler/rust-time2"
documentation = "https://sfackler.github.io/rust-time2/doc/v0.1.0/time2"
readme = "README.md"

[features]
beta = []

[dependencies]
