[package]
name = "time2"
version = "0.2.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Experimental extensions to the std::time module"
repository = "https://github.com/sfackler/rust-time2"
documentation = "https://sfackler.github.io/rust-time2/doc/v0.2.0/time2"
readme = "README.md"

[features]
beta = []

[dev-dependencies]
quickcheck = "0.2"
rand = "0.3"
